# MyEngine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  ChangeLog.md  Edit64.kdev4  README.md  debug_compilation_commands.bat  doxygen_config
.kdev4/: Edit64.kdev4
Editor/: CMakeLists.txt  Directory.cpp  Main.cpp  Parse.cpp  Parse.h
Editor/QT/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h  tree.cpp  tree.h
Engine/: CMakeLists.txt  pch.h
Engine/include/: bob.h
Engine/src/: Actor.cpp  Actor.h  CMakeLists.txt  Collision.cpp  Collision.h  Component.cpp  Component.h  Controller.cpp  Controller.h  Course.h  Engine64.h  EventSystem.cpp  EventSystem.h  Events.cpp  Events.h  File.h  GUI.h  Level.cpp  Level.h  Model.cpp  Model.h  Object.cpp  Object.h  Shapes.cpp  Shapes.h
Engine/src/Common/: Binary.cpp  Binary.h  CMakeLists.txt  Color.cpp  Color.h  Console.cpp  Console.h  Delegate.h  Error.h  File.cpp  File.h  Hex.cpp  Hex.h  Log.cpp  Log.h  Mathematics.cpp  Mathematics.h  Matrix.h  Shapes.h  TextureCoord.cpp  TextureCoord.h  TextureCoords.cpp  TextureCoords.h  Tree.h  Units.cpp  Units.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vertex.cpp  Vertex.h
Engine/src/Common/Shapes/: CMakeLists.txt  Shapes2D.cpp  Shapes3D.cpp
Engine/src/Components/: CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  CollisionComponent.cpp  CollisionComponent.h  Component.h  ModelComponent.cpp  ModelComponent.h
Engine/src/Core/: CMakeLists.txt  Clock.cpp  Clock.h  Entry.cpp  Entry.h  Enviroment.cpp  Enviroment.h  Load.cpp  Load.h  Log.cpp  Log.h  Runtime.cpp  Runtime.h  Systems.cpp  Systems.h  Time.cpp  Time.h
Engine/src/Core/Graphics/: Buffer.h  CMakeLists.txt  GLDebug.cpp  Graphics.cpp  Graphics.h  Shader.cpp  Shader.h  Texture.h
Engine/src/Core/Graphics/Buffers/: Buffer.cpp  CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h
Engine/src/Core/Graphics/Texture/: Bitmap.cpp  Bitmap.h  ModelTexture.cpp  Texture.cpp
Engine/src/Core/Media/: CMakeLists.txt  FontMedia.h  Graphics2DMedia.h  GraphicsMedia.h  InputCodes.h  InputMedia.cpp  InputMedia.h  WindowMedia.cpp  WindowMedia.h
Engine/src/Core/Media/Graphics/: CMakeLists.txt  GraphicsBuffer.cpp  GraphicsBuffer.h  Texture.h
Engine/src/Core/Media/Graphics/Texture/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  ModelTexture.cpp  Texture.cpp
Engine/src/Core/MediaBackends/: CMakeLists.txt
Engine/src/Core/MediaBackends/DirectX/: CMakeLists.txt
Engine/src/Core/MediaBackends/DirectX/Direct3D/: CMakeLists.txt  D3DBuffer.h  D3DGraphics.cpp  D3DGraphics.h  D3DHeaders.h  D3DMath.cpp  D3DMath.h  D3DShader.cpp  D3DShader.h
Engine/src/Core/MediaBackends/DirectX/Direct3D/D3DBuffers/: CMakeLists.txt  D3DBuffer.cpp  D3DIndexBuffer.cpp  D3DIndexBuffer.h  D3DUniformBuffer.cpp  D3DUniformBuffer.h  D3DVertexBuffer.cpp  D3DVertexBuffer.h
Engine/src/Core/MediaBackends/OpenGL/: CMakeLists.txt  OGLBuffer.h  OGLDebug.cpp  OGLDebug.h  OGLGraphics.cpp  OGLGraphics.h  OGLGraphics2D.cpp  OGLGraphics2D.h  OGLHeaders.h  OGLMath.cpp  OGLMath.h  OGLShader.cpp  OGLShader.h  OGLTextureManager.cpp  OGLTextureManager.h
Engine/src/Core/MediaBackends/OpenGL/OGLBuffers/: CMakeLists.txt  OGLBuffer.cpp  OGLFrameBuffer.cpp  OGLFrameBuffer.h  OGLIndexBuffer.cpp  OGLIndexBuffer.h  OGLUniformBuffer.cpp  OGLUniformBuffer.h  OGLVertexBuffer.cpp  OGLVertexBuffer.h
Engine/src/Core/MediaBackends/SDL/: CMakeLists.txt  SDLEvents.cpp  SDLEvents.h  SDLHeaders.h  SDLInput.cpp  SDLInput.h  SDLWindow.cpp  SDLWindow.h
Engine/src/Core/MediaBackends/XInput/: CMakeLists.txt  XInput.cpp  XInput.h
Engine/src/Core/MediaDevices/: CMakeLists.txt  InputDevice.cpp  InputDevice.h
Engine/src/Events/: CMakeLists.txt  Events.cpp  InputEvents.cpp  InputEvents.h  WindowEvents.cpp  WindowEvents.h
Engine/src/GUI/: Button.cpp  Button.h  CMakeLists.txt  GUI.cpp  GUI.h  GUIComponent.h  Text.cpp  Text.h  Widget.cpp  Widget.h
Engine/src/GUI/GUIComponents/: Button.h  Text.cpp  Text.h
Engine/src/Graphics/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  GLDebug.cpp  GLDebug.h  Graphics.cpp  Graphics.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h
cat_and_mouse/: CMakeLists.txt  Cat.cpp  Cat.h  Main.cpp  Mouse.cpp  Mouse.h
doc/: Camera.md  Delegation.md  GUI.md  Overview.md  Shapes2DExamples.md  Tutorial.md  remove.md
res/: BaseShader.shader  BasicFragment.fshader  BasicVertex.vshader  GameFrag.fshader  GameVertex.vshader  SkyVertex.vshader  TextFrag.fshader  TextVertex.vshader  UI.vshader  UIFragment.fshader  cube.c  cube.emodel  error_log.txt  landcollision.ecol  model.c  model.emodel  sky.emodel  smile.etex  terrain.emodel  test.txt  triangle.c
src/: Actor.h  CMakeLists.txt  Defines.h  File.cpp  File.h  Main.cpp  Model.cpp  Parse.h  pch.h
src/Common/: Binary.cpp  Binary.h  Hex.cpp  Hex.h  Units.cpp  Units.h
src/Editor/: CMakeLists.txt  Directory.cpp  Directory.h  Main.cpp  Parse.cpp  Parse.h
src/Editor/QT/: dockwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h  tree.h
src/Engine/: Actor.cpp  Actor.h  CMakeLists.txt  Controller.cpp  Controller.h  Course.h  EventSystem.h  Events.cpp  Events.h  File.cpp  File.h  Level.cpp  Level.h  Model.cpp  Model.h  pch.h
src/Engine/Common/: Binary.cpp  Binary.h  CMakeLists.txt  Units.h
src/Engine/Core/: Enviroment.cpp  Enviroment.h  Load.cpp  Load.h
src/Engine/Graphics/: Camera.cpp  Camera.h  GLDebug.cpp  GLDebug.h  Graphics.cpp  Graphics.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Units.h  VertexBuffer.cpp  VertexBuffer.h
src/Graphics/: Camera.cpp  Camera.h  Graphics.cpp  Graphics.h  IndexBuffer.h  Shader.h  VertexBuffer.cpp  VertexBuffer.h
src/QT/: mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h
strevo/: CMakeLists.txt  Main.cpp  Strevo.cpp  Strevo.h  Sword.cpp  Sword.h
test/: Main.cpp  (+1 more)
